Add Nebulas, Regions, Unknown Genus, Fix null predictions Added Nebulas and Regions for predictions and also added some simple logic to announce when near a new nebula and in a new region in Discovery Monitor. Added an "unknown" genus type for ehen predictions fail to make any matches, rare but causes a null exception. Also added some logic to the min/max predicted values that was probably the cause of the null exception in the first place.

--- a/DataDefinitions/Properties/OrganicGenus.resx
+++ b/DataDefinitions/Properties/OrganicGenus.resx
@@ -264,6 +264,9 @@
   <data name="Tussocks" xml:space="preserve">
     <value>Tussock</value>
   </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>Unknown</value>
+  </data>
   <data name="Vents" xml:space="preserve">
     <value>Amphora</value>
   </data>
