--- a/DataDefinitions/Properties/SignalSource.resx
+++ b/DataDefinitions/Properties/SignalSource.resx
@@ -417,4 +417,8 @@
     <value>Minor Wreckage</value>
     <comment>Minor Wreckage</comment>
   </data>
+  <data name="Settlement_Unflattened_TGMegaBarnacle" xml:space="preserve">
+    <value>Thargoid Spire Site</value>
+    <comment>Thargoid Spire Site</comment>
+  </data>
 </root>
