--- a/DataDefinitions/Properties/Modules.resx
+++ b/DataDefinitions/Properties/Modules.resx
@@ -649,4 +649,8 @@
     <value>Guardian Nanite Torpedo Pylon</value>
     <comment>Module Guardian Nanite Torpedo Pylon</comment>
   </data>
+  <data name="FrameShiftDrive_SCO" xml:space="preserve">
+    <value>Frame Shift Drive with Supercruise Overcharge</value>
+    <comment>Module Frame Shift Drive (SCO)</comment>
+  </data>
 </root>
