--- a/DataDefinitions/Properties/Modules.zh-CN.resx
+++ b/DataDefinitions/Properties/Modules.zh-CN.resx
@@ -645,5 +645,12 @@
     <value>提取导弹</value>
     <comment>Module Human </comment>
   </data>
-  
+  <data name="GuardianNaniteTorpedoPylon" xml:space="preserve">
+    <value>守护者纳米鱼雷塔</value>
+    <comment>Module Guardian Nanite Torpedo Pylon</comment>
+  </data>
+  <data name="FrameShiftDrive_SCO" xml:space="preserve">
+    <value>超空间引擎（含超巡过载）</value>
+    <comment>Module Frame Shift Drive (SCO)</comment>
+  </data>
 </root>
