--- a/DataDefinitions/Properties/SignalSource.pt-BR.resx
+++ b/DataDefinitions/Properties/SignalSource.pt-BR.resx
@@ -417,4 +417,8 @@
     <value>Destroços Menores</value>
     <comment>Minor Wreckage</comment>
   </data>
+  <data name="Settlement_Unflattened_TGMegaBarnacle" xml:space="preserve">
+    <value>Local de Pináculo Thargoid</value>
+    <comment>Thargoid Spire Site</comment>
+  </data>
 </root>
