--- a/DataDefinitions/Properties/SignalSource.zh-CN.resx
+++ b/DataDefinitions/Properties/SignalSource.zh-CN.resx
@@ -417,4 +417,8 @@
     <value>小型残骸</value>
     <comment>Minor Wreckage</comment>
   </data>
+  <data name="Settlement_Unflattened_TGMegaBarnacle" xml:space="preserve">
+    <value>八角尖塔节点</value>
+    <comment>Thargoid Spire Site</comment>
+  </data>
 </root>
